# ecal

./: .appveyor.yml  .buildinfo  .clang-tidy  .clang-tidy-for-the-future  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CHANGES.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  HowToWindows.txt  Jenkinsfile  NOTICE.md  NOTICE.txt  PVSSettings.xml  README.md  _CLEAN.bat  _CMAKE.bat  _CMAKE_COMPLETE.bat  _CMAKE_CURL.bat  _CMAKE_FULL.bat  _CMAKE_HDF5.bat  _CMAKE_MINIMAL.bat  _CMAKE_PRE_CONFIGURE_DEPENDENCIES.bat  _CMAKE_PRE_CONFIGURE_DEPENDENCIES_COMPLETE.bat  _CMAKE_SDK.bat  _MAKE.bat  _MAKE_COMPLETE (Release).bat  _MAKE_SDK (Debug).bat  _SETUP.bat  _config.yml  applications.html  appveyor.yml  build.sh  cod.md  colcon.pkg  (+24 more)
app/app_pb/: CMakeLists.txt
app/apps/: CMakeLists.txt
app/meas_cutter/: CMakeLists.txt
app/meas_cutter/src/: config_file_parser.cpp  config_file_parser.h  ecal_meas_cutter.cpp  ecal_meas_cutter.h  ecal_meas_cutter_globals.h  logger.cpp  logger.h  main.cpp  measurement_converter.cpp  measurement_converter.h  measurement_exporter.cpp  measurement_exporter.h  measurement_importer.cpp  measurement_importer.h  measurement_worker.cpp  measurement_worker.h  thread_pool.cpp  thread_pool.h  utils.h
contrib/ecalhdf5/: CMakeLists.txt
contrib/ecalhdf5/src/: CMakeLists.txt  datatype_helper.cpp  datatype_helper.h  eh5_meas.cpp  eh5_meas_api_v2.cpp  eh5_meas_api_v3.cpp  eh5_meas_dir.cpp  eh5_meas_dir.h  eh5_meas_file_v1.cpp  eh5_meas_file_v1.h  eh5_meas_file_v2.cpp  eh5_meas_file_v2.h  eh5_meas_file_v3.cpp  eh5_meas_file_v3.h  eh5_meas_file_v4.cpp  eh5_meas_file_v4.h  eh5_meas_file_v5.cpp  eh5_meas_file_v5.h  eh5_meas_file_v6.cpp  eh5_meas_file_v6.h  eh5_meas_file_writer_v5.cpp  eh5_meas_file_writer_v5.h  eh5_meas_file_writer_v6.cpp  eh5_meas_file_writer_v6.h  eh5_meas_impl.h  eh5_util.h  escape.cpp  escape.h  hdf5_helper.cpp  hdf5_helper.h
contrib/ecalproto/: CMakeLists.txt
contrib/ecalproto/src/: CMakeLists.txt  ecal_proto_decoder.cpp  ecal_proto_dyn.cpp  ecal_proto_maximum_array_dimensions.cpp  ecal_proto_message_filter.cpp
contrib/mma/: CMakeLists.txt  README.md
contrib/mma/include/: interruptable_timer.h  logger.h  mma.h  mma_defs.h  mma_impl.h  query_manager.h  zombie_instance_killer.h
contrib/mma/src/: CMakeLists.txt  logger.cpp  mma.cpp  mma.rc  mma_application.cpp  query_manager.cpp  zombie_instance_killer.cpp
doc/: CMakeLists.txt  FindSphinx.cmake  Readme.md  conf.py.in  conf_py_buildvars.py.in  doc.hpp  doc.hpt  eCAL.pptx  include.txt  pyproject.toml  requirements.txt
doc/_static/css/: bignums.css  sphinx-book-theme-1.1.2-ecaladdon.css
doc/adr/: ADR-0001-entity-id-generation.md
doc/arch/: Readme.md  ecal_send_activity_hl.plantuml
doc/download_page/: _include_ecalicons.txt  conf.py  index.rst  test.rst
doc/download_page_2/: conf.py  include.txt  index.rst  test.rst
doc/extensions/: download.rst  generate_download_archive.py  generate_download_tables.py  generate_ecalicons.py  generate_release_documentation.py  generate_release_page.py
doc/extensions/empy_helpers/: __init__.py
doc/extensions/resource/: __download_table.html.em  __main_page_download_section.rst.em  download_archive.rst.em  download_archive_page.rst.em  download_main_page.html.em  download_page.rst.jinja  download_table.html.em  main_page_download_section.rst.em  ppa_instructions_multiversion_tabs.rst.jinja  ppa_instructions_singleversion.rst.jinja  ppa_tabs.rst.em  release_page.rst.jinja  release_page_index.rst.jinja
doc/mockups/: eCALMon.bmml  eCALMon_LivePreview.bmml
doc/release_page/: conf.py
doc/release_page/generate_release_documentation/: __init__.py
doc/release_page/resource/: release_page_index.rst.jinja
doc/rst/: applications.rst  conf.py  configuration.rst  create_links_to_eclipse_ecal.py  ecal_6_migration.rst  ecal_api.rst  faq.rst  generate_ecalicons.py  include.txt  index.rst  license.rst  old code.txt
doc/rst/_css_helpers/: change_colors.py  pydata-sphinx-theme-0.15.2-orig.css  sphinx-book-theme-0.3.3.css  sphinx-book-theme-1.1.2-orig.css
doc/rst/_download_archive/: download_archive.rst  download_archive_ecal_5_10_0.rst  download_archive_ecal_5_10_1.rst  download_archive_ecal_5_3_4_3.rst  download_archive_ecal_5_3_4_4.rst  download_archive_ecal_5_3_5.rst  download_archive_ecal_5_4_0.rst  download_archive_ecal_5_5_0.rst  download_archive_ecal_5_5_1.rst  download_archive_ecal_5_5_2.rst  download_archive_ecal_5_5_3.rst  download_archive_ecal_5_5_4.rst  download_archive_ecal_5_5_5.rst  download_archive_ecal_5_6_0.rst  download_archive_ecal_5_7_1.rst  download_archive_ecal_5_7_11.rst  download_archive_ecal_5_7_12.rst  download_archive_ecal_5_7_13.rst  download_archive_ecal_5_7_14.rst  download_archive_ecal_5_7_15.rst  download_archive_ecal_5_7_3.rst  download_archive_ecal_5_7_4.rst  download_archive_ecal_5_7_5.rst  download_archive_ecal_5_7_6.rst  download_archive_ecal_5_7_8.rst  download_archive_ecal_5_7_9.rst  download_archive_ecal_5_8_0.rst  download_archive_ecal_5_8_1.rst  download_archive_ecal_5_8_10.rst  download_archive_ecal_5_8_12.rst  download_archive_ecal_5_8_13.rst  download_archive_ecal_5_8_14.rst  (+20 more)
doc/samples/: CMakeLists.txt
ecal/: CMakeLists.txt  ecal-core-options.cmake
ecal/benchmarks/: CMakeLists.txt  README.md  benchmark_pubsub.cpp  throughput_calculator.py
ecal/core/: CMakeLists.txt
ecal/core_pb/: CMakeLists.txt
ecal/dynamic_threadpool/: CMakeLists.txt
ecal/pb/: CMakeLists.txt
ecal/protoc_gen_pbftags/: CMakeLists.txt  main.cpp
ecal/samples/: CMakeLists.txt
ecal/service/: CMakeLists.txt  Readme.md
ecal/service_sample/: CMakeLists.txt
ecal/tests/: CMakeLists.txt
ecal/types/: CMakeLists.txt
lang/c/: CMakeLists.txt
lang/csharp/: CMakeLists.txt
lang/python/: CMakeLists.txt  README.md  readme.md  sample.pyproj.in  setup.py.in
lib/CustomQt/: CMakeLists.txt
lib/CustomTclap/: CMakeLists.txt
lib/EcalParser/: CMakeLists.txt
lib/QEcalParser/: CMakeLists.txt
lib/ThreadingUtils/: CMakeLists.txt
samples/: CMakeLists.txt
samples/csharp/: CMakeLists.txt
(+11293 files in other folders)
